ids/27/606.txt
[1] [CITE[UbuntuでPostgreSQLをインストールからリモートアクセスまでの手順 - Qiita]]
( ([TIME[2016-07-13 12:10:26 +09:00]]))
<http://qiita.com/ibara1454/items/40ce2d82926f48cf02bc>

[2] [CITE[psql接続時に対話でパスワードを入力しない - shibainu55日記]]
( ([TIME[2016-07-13 12:29:40 +09:00]]))
<http://d.hatena.ne.jp/shibainu55/20090917/1253453342>

[3] [CITE@ja[Docker Hub 公式 PostgreSQL イメージを用いて、データベースクラスタ作成済みコンテナイメージを作成する - Thanks Driven Life]]
( ([TIME[2016-11-01 19:14:58 +09:00]]))
<http://gongo.hatenablog.com/entry/2015/08/04/232650>

[4] ( ([TIME[2016-11-01 19:15:52 +09:00]]))
<https://hub.docker.com/_/postgres/>

[5] [CITE@en[TJC/Test-postgresql: Fork of Test::postgresql that is actively maintained]]
([TIME[2017-12-30 00:19:27 +09:00]])
<https://github.com/TJC/Test-postgresql>

[6] [CITE@ja[Ubuntu で PostgreSQL を使ってみよう(続編) | Let's Postgres]]
([TIME[2017-12-30 01:16:37 +09:00]])
<https://lets.postgresql.jp/documents/tutorial/ubuntu/4>

[7] [[Debian]] と [[Ubuntu]] はこういうわけのわからんことするの好きだなあ。
その方がいいという言い分があるのはわからんでもないが、
普通の postgres を前提にしたプログラムが動かないのは地獄でしかない。

[8] [CITE[postgresql - Is there a maximum length constraint for a postgres query? - Database Administrators Stack Exchange]]
([TIME[2018-01-13 16:46:41 +09:00]])
<https://dba.stackexchange.com/questions/131399/is-there-a-maximum-length-constraint-for-a-postgres-query>

[9] [CITE[postgresql - Is there a maximum length constraint for a postgres query? - Database Administrators Stack Exchange]]
([TIME[2018-01-13 16:56:52 +09:00]])
<https://dba.stackexchange.com/questions/131399/is-there-a-maximum-length-constraint-for-a-postgres-query>

[10] 
[PRE(code)[
dbdimp.c: In function 'pg_db_error_field':
dbdimp.c:4325:21: error: 'PG_DIAG_SEVERITY_NONLOCALIZED' undeclared (first use in this function)
         fieldcode = PG_DIAG_SEVERITY_NONLOCALIZED; // i.e. 'V'
                     ^
]PRE]

[11] [CODE[DBD::Pg]] 3.9.0 でこのコードが入りましたが、
やや古めの [[PostgreSQL]] ではこの定数が定義されていないので、エラーになります。
解決策は新しい [[PostgreSQL]] に更新するか、
[CODE[DBD::Pg]] を 3.8.1 以前に戻すことです。
[TIME[2019-08-14T02:19:53.800Z]]